# raft

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  raft_e2e.sh
src/app/: config.py  main.py
src/app/api/: errors.py  healthz.py  kv_routes.py  raft_routes.py
src/app/raft/: log.py  models.py  node.py  persistence.py  replication.py  runtime.py  state_machine.py  timers.py
src/app/utils/: deps.py  logging.py
src/tests/: RaftKV.local.postman_environment.json  RaftKV.postman_collection.json  conftest.py  test_kv_inprocess.py  test_membership_joint.py  test_parallel_request_vote.py
