[project]
name = "raft"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "loguru>=0.7.3",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "uvicorn>=0.38.0",
]
